# cppcore

./: CMakeLists.txt  LICENSE
Doc/: cppcore.vsd
Src/: CMakeLists.txt  _BuildAll-VC2008.sln  _BuildAll.sln  _BuildAll.vcproj  _BuildAll.vcxproj  _BuildAll_Linux.sln
Src/000_String/: 000_String.h  000_StringA.cproj  000_StringA.vcproj  000_StringA.vcxproj  000_StringW.cproj  000_StringW.vcproj  000_StringW.vcxproj  ASCII.cpp  ASCII.h  BOM.cpp  BOM.h  BOMT.cpp  EuckrEncoding.cpp  EuckrEncoding.h  Exception.cpp  Exception.h  NumericString.cpp  NumericString.h  POSIX.h  STLString.cpp  STLString.h  StdString.cpp  StdString.h  StdStringLegacy.cpp  StdStringLegacy.h  String.h  Unicode.cpp  Unicode.h  UnicodeEncoding.cpp  UnicodeEncoding.h  UnicodeEncoding_Linux_Mac.cpp  UnicodeEncoding_Win.cpp  Unicode_Linux_Mac.cpp  Unicode_Win.cpp  Utility.cpp  Utility.h  stdafx.h
Src/000_String/000_StringA.xcodeproj/: project.pbxproj
Src/000_String/000_StringA.xcodeproj/xcuserdata/profrog.xcuserdatad/xcschemes/: 000_StringA.xcscheme  (+1 more)
Src/000_String/000_StringW.xcodeproj/: project.pbxproj
Src/001_Encoder/: 001_Encoder.h  001_EncoderA.cproj  001_EncoderA.vcproj  001_EncoderA.vcxproj  001_EncoderA.vcxproj.filters  001_EncoderW.cproj  001_EncoderW.vcproj  001_EncoderW.vcxproj  001_EncoderW.vcxproj.filters  AsymCipher.cpp  AsymCipher.h  AsymCipherFunction.cpp  AsymCipherFunction.h  AsymRSA.cpp  AsymRSA.h  Base64.cpp  Base64.h  CryptoPPSingleton.cpp  CryptoPPSingleton.h  Encoder.h  HMAC.cpp  HMAC.h  Hash.cpp  Hash.h  HashFunction.cpp  HashFunction.h  HashFunctionT.cpp  IPubKeyCipher.h  ISymAlgorithm.h  ISymMode.h  PubKeyCipherFunction.cpp  PubKeyCipherFunction.h  PubKeyElGamal.cpp  PubKeyElGamal.h  PubKeyRSA.cpp  PubKeyRSA.h  SHA1.cpp  SHA1.h  StringFunction.cpp  StringFunction.h  (+43 more)
Src/001_Encoder/001_EncoderA.xcodeproj/: project.pbxproj
Src/001_Encoder/001_EncoderW.xcodeproj/: project.pbxproj
Src/001_Encoder/AES/: aes.h  aescrypt.asm  aescrypt.c  aeshash.c  aesopt.h  aestab.c
Src/001_Encoder/SEED/: SEED_128_KISA.cpp  SEED_128_KISA.h  SEED_128_KISA.tab  SEED_256_KISA.cpp  SEED_256_KISA.h
Src/001_Encoder/ssdeep/: edit_dist.cpp  filedata.cpp  filedata.h  find-file-size.cpp  fuzzy.cpp  fuzzy.h  helpers.cpp  match.cpp  match.h  ssdeep.h  tchar-local.h  ui.cpp
Src/100_System/: 100_System.h  100_SystemA.cproj  100_SystemA.vcproj  100_SystemA.vcxproj  100_SystemW.cproj  100_SystemW.vcproj  100_SystemW.vcxproj  ELFParser.cpp  ELFParser.h  ELFParserT.cpp  Environment.cpp  Environment.h  EnvironmentT.cpp  EnvironmentT_Linux.cpp  EnvironmentT_Linux_Mac.cpp  EnvironmentT_Mac.cpp  EnvironmentT_Win.cpp  Environment_Linux.cpp  Environment_LinuxT.cpp  Environment_Linux_Mac.cpp  Environment_Mac.cpp  Environment_Win.cpp  Environment_WinT.cpp  ExeParserSuper.cpp  ExeParserSuper.h  FileSystem.h  FileSystemT_Linux_Mac.cpp  FileSystemT_Win.cpp  FileSystem_Linux.cpp  FileSystem_LinuxT.cpp  FileSystem_Linux_Mac.cpp  FileSystem_Mac.cpp  FileSystem_MacT.cpp  FileSystem_Win.cpp  FileSystem_WinT.cpp  GlobalSemaphoreMap.cpp  GlobalSemaphoreMap.h  Information.cpp  Information.h  InterlockedOperation.h  (+50 more)
Src/100_System/100_SystemA.xcodeproj/: project.pbxproj
Src/100_System/100_SystemW.xcodeproj/: project.pbxproj
Src/200_Common/: 200_Common.h  200_CommonA.cproj  200_CommonA.vcproj  200_CommonA.vcxproj  200_CommonW.cproj  200_CommonW.vcproj  200_CommonW.vcxproj  CircularQueue.h  CmdLineHelper.cpp  CmdLineHelper.h  Common.h  CriticalSection.cpp  CriticalSection.h  DuplicatedProcChecker.cpp  DuplicatedProcChecker.h  FileHashFunction.cpp  FileHashFunction.h  FileHashFunctionT.cpp  FileUtility.cpp  FileUtility.h  HashFunction.cpp  HashFunction.h  HashFunctionT.cpp  IMemoryAccess.h  INIParser.cpp  INIParser.h  INIParserFunc.cpp  INIParserFunc.h  LockFreeQueue.h  Log.cpp  Log.h  MemoryMappedFile.cpp  MemoryMappedFile.h  MemoryMappedFileT.cpp  Mutex.cpp  Mutex.h  MutexT.cpp  PEParser.cpp  PEParser.h  PEParserData.h  (+37 more)
Src/200_Common/200_CommonA.xcodeproj/: project.pbxproj
Src/200_Common/200_CommonW.xcodeproj/: project.pbxproj
Src/300_Formatter/: 300_Formatter.h  300_FormatterA.vcxproj  300_FormatterA.vcxproj.filters  300_FormatterW.vcxproj  300_FormatterW.vcxproj.filters  ANSIFileReader.cpp  ANSIFileReader.h  ANSIFileWritter.cpp  ANSIFileWritter.h  ANSIFormatter.cpp  ANSIFormatter.h  ANSIStringReader.cpp  ANSIStringReader.h  ANSIStringWritter.cpp  ANSIStringWritter.h  ASCIIFileReader.cpp  ASCIIFileReader.h  ASCIIFileWritter.cpp  ASCIIFileWritter.h  ASCIIFormatter.cpp  ASCIIFormatter.h  ASCIIStringReader.cpp  ASCIIStringReader.h  ASCIIStringWritter.cpp  ASCIIStringWritter.h  BytesReader.cpp  BytesReader.h  BytesWriter.cpp  BytesWriter.h  CSVDeserializer.cpp  CSVDeserializer.h  CSVSerializer.cpp  CSVSerializer.h  DBValueArraySerializer.cpp  DBValueArraySerializer.h  FileReader.cpp  FileReader.h  FileWritter.cpp  FileWritter.h  FmtTypes.h  (+83 more)
Src/400_Server/: 400_Server.h  400_ServerA.vcxproj  400_ServerW.vcxproj  BinProtocol.cpp  BinProtocol.h  ISocket.h  ISyncSocket.h  JsonProtocol.cpp  JsonProtocol.h  Packetizer.cpp  Packetizer.h  ProtocolSuper.cpp  ProtocolSuper.h  SocketCommon.cpp  SocketCommon.h  SocketForProtocol.cpp  SocketForProtocol.h  SocketForProtocolT.cpp  SyncConnection.cpp  SyncConnection.h  SyncServer.cpp  SyncServer.h  SyncTCPSocket.cpp  SyncTCPSocket.h  SyncUDPSocket.cpp  SyncUDPSocket.h  UBJsonProtocol.cpp  UBJsonProtocol.h  stdafx.h
Src/999_Cppcore/: 999_Cppcore.vcxproj
Src/_BuildAll.xcodeproj/: project.pbxproj
Src/_BuildAll.xcodeproj/xcuserdata/profrog.xcuserdatad/xcschemes/: _BuildAll.xcscheme  xcschememanagement.plist
Src/_BuildAll.xcworkspace/: contents.xcworkspacedata
Src/_BuildAll.xcworkspace/xcuserdata/profrog.xcuserdatad/: WorkspaceSettings.xcsettings
Src/__Common/: Compatibility.h  Define.h  ErrorCode.h  Struct.h  Type.h
Test/DummyDynamicLibrary/: APIEntry.cpp  APIEntry.h  CMakeLists.txt  DllMain_Win.cpp  DummyDynamicLibrary.sln  DummyDynamicLibrary.vcxproj  SoMain_Linux_Mac.cpp  stdafx.h
Test/DummyProcess/: CMakeLists.txt  DummyProcess.sln  DummyProcess.vcxproj  main.cpp  stdafx.h
(+124 files in other folders)
